--- a/MyPad/App.xaml
+++ b/MyPad/App.xaml
@@ -11,7 +11,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Blue.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/ToastNotifications.Messages;component/Themes/Default.xaml"/>
                 <ResourceDictionary Source="./Views/Styles/Base/Generic.xaml"/>
-                <ResourceDictionary Source="./Views/Styles/Generic.xaml"/>
+                <ResourceDictionary Source="./Views/Styles/Controls/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
