--- a/MyPad/Views/Regions/MaintenanceContentView.xaml
+++ b/MyPad/Views/Regions/MaintenanceContentView.xaml
@@ -31,13 +31,13 @@
     <Grid Margin="20 0 20 20">
         <TabControl Padding="5 10 0 0" m:HeaderedControlHelper.HeaderFontWeight="Bold">
             <TabControl.Resources>
-                <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Default.DataGrid}">
+                <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Common.DataGrid}">
                     <Setter Property="Margin" Value="5"/>
                 </Style>
-                <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource Default.Expander}">
+                <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource Common.Expander}">
                     <Setter Property="Margin" Value="5"/>
                 </Style>
-                <Style TargetType="{x:Type lcw:CartesianChart}" BasedOn="{StaticResource Default.CartesianChart}">
+                <Style TargetType="{x:Type lcw:CartesianChart}" BasedOn="{StaticResource Common.CartesianChart}">
                     <Setter Property="Margin" Value="5"/>
                 </Style>
             </TabControl.Resources>
@@ -47,7 +47,7 @@
                 <Grid>
                     <TabControl TabStripPlacement="Bottom" m:HeaderedControlHelper.HeaderFontWeight="Bold" m:HeaderedControlHelper.HeaderFontSize="{DynamicResource MahApps.Font.Size.FloatingWatermark}">
                         <TabControl.Resources>
-                            <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Default.DataGrid}">
+                            <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Common.DataGrid}">
                                 <Setter Property="AutoGenerateColumns" Value="False"/>
                                 <Setter Property="HeadersVisibility" Value="Row"/>
                                 <Setter Property="RowHeaderWidth" Value="50"/>
