--- a/MyPad/Views/Regions/StatusBarView.xaml
+++ b/MyPad/Views/Regions/StatusBarView.xaml
@@ -15,13 +15,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
-        <Style TargetType="{x:Type StatusBarItem}" BasedOn="{StaticResource Default.StatusBarItem}">
+        <Style TargetType="{x:Type StatusBarItem}" BasedOn="{StaticResource Common.StatusBarItem}">
             <Setter Property="Padding" Value="0"/>
             <Style.Resources>
                 <Style TargetType="{x:Type m:TransitioningContentControl}">
                     <Setter Property="Margin" Value="5 0"/>
                 </Style>
-                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Default.Button}">
+                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Common.Button}">
                     <Setter Property="Focusable" Value="False"/>
                     <Setter Property="Padding" Value="5 0"/>
                     <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
@@ -37,7 +37,7 @@
                         <SolidColorBrush x:Key="MahApps.Brushes.Gray8" Color="{StaticResource DarkBlueColorKey}"/>
                     </Style.Resources>
                 </Style>
-                <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource Default.ToggleButton}">
+                <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource Common.ToggleButton}">
                     <Setter Property="Focusable" Value="False"/>
                     <Setter Property="Padding" Value="5 0"/>
                     <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
@@ -70,7 +70,7 @@
             </Style.Resources>
         </Style>
 
-        <Style TargetType="{x:Type StatusBar}" BasedOn="{StaticResource Default.StatusBar}">
+        <Style TargetType="{x:Type StatusBar}" BasedOn="{StaticResource Common.StatusBar}">
             <Setter Property="Background" Value="{DynamicResource CyanColorBrush}"/>
             <Style.Triggers>
                 <!-- WindowTitleBrush に追従する処理を打ち消す -->
