--- a/MyPad/Views/Styles/Controls/DiffViewer.xaml
+++ b/MyPad/Views/Styles/Controls/DiffViewer.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:dp="clr-namespace:DiffPlex.Wpf.Controls;assembly=DiffPlex.Wpf">
 
-    <Style x:Key="Default.DiffViewer" TargetType="{x:Type dp:DiffViewer}">
+    <Style x:Key="Common.DiffViewer" TargetType="{x:Type dp:DiffViewer}">
         <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Text}"/>
         <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Background}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Control.Background}"/>
@@ -12,6 +12,6 @@
         <Setter Property="SplitterWidth" Value="0"/>
     </Style>
 
-    <Style TargetType="{x:Type dp:DiffViewer}" BasedOn="{StaticResource Default.DiffViewer}"/>
+    <Style TargetType="{x:Type dp:DiffViewer}" BasedOn="{StaticResource Common.DiffViewer}"/>
 
 </ResourceDictionary>
