--- a/MyPad/Views/Styles/Base/Advanced.xaml
+++ b/MyPad/Views/Styles/Base/Advanced.xaml
@@ -1,21 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:s="clr-namespace:System;assembly=System.Runtime"
                     xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
                     xmlns:mi="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="./Sizes.xaml"/>
         <ResourceDictionary Source="./Colors.xaml"/>
         <ResourceDictionary Source="./Common.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
-    <s:Double x:Key="Common.CircleButton.ButtonSize">40</s:Double>
-    <s:Double x:Key="Common.CircleButton.IconSize">20</s:Double>
-
-    <!-- フリップビュー ナビゲーションボタン -->
-    <Style x:Key="Common.FlipView.Navigation" TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button.FlipView.Navigation}">
-        <Setter Property="Height" Value="50"/>
-    </Style>
 
     <!-- ボタン (ボーダーレス) -->
     <Style x:Key="Common.ChromelessButton" TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button.Chromeless}">
@@ -109,20 +101,24 @@
 
     <!-- サークルボタン -->
     <Style x:Key="Common.CircleButton" TargetType="{x:Type ButtonBase}" BasedOn="{StaticResource MahApps.Styles.Button.Circle}">
-        <Setter Property="Width" Value="{StaticResource Common.CircleButton.ButtonSize}"/>
-        <Setter Property="Height" Value="{StaticResource Common.CircleButton.ButtonSize}"/>
+        <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButton}"/>
+        <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButton}"/>
         <Style.Resources>
             <Style TargetType="{x:Type mi:PackIconModern}">
-                <Setter Property="Width" Value="{StaticResource Common.CircleButton.IconSize}"/>
-                <Setter Property="Height" Value="{StaticResource Common.CircleButton.IconSize}"/>
+                <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
+                <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
             </Style>
             <Style TargetType="{x:Type mi:PackIconMaterial}">
-                <Setter Property="Width" Value="{StaticResource Common.CircleButton.IconSize}"/>
-                <Setter Property="Height" Value="{StaticResource Common.CircleButton.IconSize}"/>
+                <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
+                <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
             </Style>
             <Style TargetType="{x:Type mi:PackIconFontAwesome}">
-                <Setter Property="Width" Value="{StaticResource Common.CircleButton.IconSize}"/>
-                <Setter Property="Height" Value="{StaticResource Common.CircleButton.IconSize}"/>
+                <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
+                <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
+            </Style>
+            <Style TargetType="{x:Type mi:PackIconOcticons}">
+                <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
+                <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
             </Style>
         </Style.Resources>
     </Style>
@@ -141,21 +137,44 @@
 
     <!-- サークルトグルボタン -->
     <Style x:Key="Common.CircleToggleButton" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource MahApps.Styles.ToggleButton.Circle}">
-        <Setter Property="Width" Value="{StaticResource Common.CircleButton.ButtonSize}"/>
-        <Setter Property="Height" Value="{StaticResource Common.CircleButton.ButtonSize}"/>
+        <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButton}"/>
+        <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButton}"/>
         <Style.Resources>
-            <Style TargetType="{x:Type mi:PackIconModern}">
-                <Setter Property="Width" Value="{StaticResource Common.CircleButton.IconSize}"/>
-                <Setter Property="Height" Value="{StaticResource Common.CircleButton.IconSize}"/>
+            <Style x:Key="Common.CirclePackIcon" TargetType="{x:Type mi:PackIconBase}" BasedOn="{StaticResource Common.PackIcon}">
+                <Setter Property="Width" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
+                <Setter Property="Height" Value="{DynamicResource Common.Size.CircleButtonIcon}"/>
             </Style>
-            <Style TargetType="{x:Type mi:PackIconMaterial}">
-                <Setter Property="Width" Value="{StaticResource Common.CircleButton.IconSize}"/>
-                <Setter Property="Height" Value="{StaticResource Common.CircleButton.IconSize}"/>
-            </Style>
-            <Style TargetType="{x:Type mi:PackIconFontAwesome}">
-                <Setter Property="Width" Value="{StaticResource Common.CircleButton.IconSize}"/>
-                <Setter Property="Height" Value="{StaticResource Common.CircleButton.IconSize}"/>
-            </Style>
+            <Style TargetType="{x:Type mi:PackIconBootstrapIcons}" BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconBoxIcons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconCodicons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconCoolicons}"      BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconEntypo}"         BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconEvaIcons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconFeatherIcons}"   BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconFileIcons}"      BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconFontaudio}"      BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconFontAwesome}"    BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconFontisto}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconForkAwesome}"    BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconIonicons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconJamIcons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconMaterialDesign}" BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconMaterial}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconMaterialLight}"  BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconMicrons}"        BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconModern}"         BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconOcticons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconPicolIcons}"     BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconPixelartIcons}"  BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconRadixIcons}"     BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconRemixIcon}"      BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconRPGAwesome}"     BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconSimpleIcons}"    BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconTypicons}"       BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconUnicons}"        BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconVaadinIcons}"    BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconWeatherIcons}"   BasedOn="{StaticResource Common.CirclePackIcon}"/>
+            <Style TargetType="{x:Type mi:PackIconZondicons}"      BasedOn="{StaticResource Common.CirclePackIcon}"/>
         </Style.Resources>
     </Style>
 
