--- a/MyPad/Views/Styles/Base/Generic.xaml
+++ b/MyPad/Views/Styles/Base/Generic.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="./Sizes.xaml"/>
         <ResourceDictionary Source="./Colors.xaml"/>
         <ResourceDictionary Source="./Common.xaml"/>
         <ResourceDictionary Source="./Advanced.xaml"/>
