--- a/MyPad/Views/Styles/Base/Override.xaml
+++ b/MyPad/Views/Styles/Base/Override.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="./Sizes.xaml"/>
+        <ResourceDictionary Source="./Colors.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    
     <!-- フリップビュー ナビゲーションボタン -->
     <Style x:Key="Common.FlipView.Navigation" TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button.FlipView.Navigation}">
         <Setter Property="Height" Value="50"/>
