--- a/MyPad/Views/Styles/Size/Small.xaml
+++ b/MyPad/Views/Styles/Size/Small.xaml
@@ -24,4 +24,10 @@
     <s:Double x:Key="MahApps.Font.Size.ToggleSwitch.Header">14</s:Double>
     <s:Double x:Key="MahApps.Font.Size.ColorPicker.TabItemHeader">16</s:Double>
 
+    <s:Double x:Key="Common.Size.Icon">16</s:Double>
+    <s:Double x:Key="Common.Size.Tile">100</s:Double>
+    <s:Double x:Key="Common.Size.TileIcon">24</s:Double>
+    <s:Double x:Key="Common.Size.CircleButton">40</s:Double>
+    <s:Double x:Key="Common.Size.CircleButtonIcon">20</s:Double>
+
 </ResourceDictionary>
